<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff">
    <!--//faf741-->
    <!--android:background="@drawable/ic_background"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/rohlogo_foreground"/>
            <!--android:src = "@drawable/rohlogo_foreground"-->
            <!--/>-->

        <!--<android.support.v7.widget.CardView-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="80dp"-->
            <!--android:elevation="12dp"-->
            <!--android:id="@+id/view2"-->
            <!--app:cardCornerRadius="40dp"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:innerRadius="0dp"-->
            <!--android:shape="ring"-->
            <!--android:thicknessRatio="1.9">-->
            <!--<ImageView-->
                <!--android:layout_height="80dp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:id="@+id/imageView1"-->
                <!--android:src="@drawable/rohlogo_foreground"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:layout_centerHorizontal="true">-->
            <!--</ImageView>-->
        <!--</android.support.v7.widget.CardView>-->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="40dp"
            android:background="#eef9de"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:src="@drawable/ic_nv" />

            <EditText
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:ems="10"
                android:focusable="false"
                android:background="#eef9de"
                android:hint="@string/userHint"
                android:textColor="@color/brown"
                android:textSize="18sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="#eef9de"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_marginLeft="6dp"
                android:src="@drawable/ic_key" />

            <EditText
                android:id="@+id/txtPassWord"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:background="#eef9de"
                android:hint="@string/passHint"
                android:inputType="textPassword"
                android:textColor="@color/brown"
                android:textSize="18sp" >
            </EditText>
        </LinearLayout>

        <shs2.rohfeedback.widget.AutoBgButton
            android:id="@+id/btnForward"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:background="#854be2"
            android:text="@string/login"
            android:fontFamily="sans-serif"
            android:textSize="20sp"
            android:textColor="#fff
"
            android:textStyle="bold|normal"
            android:textAllCaps="false"
            />
        
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="40dip" />
        <shs2.rohfeedback.widget.AutoBgButton
            android:id="@+id/btnAbout"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="20sp"
            android:textColor="#fff"
            android:background="#854be2"
            android:text="@string/about_us"
            android:fontFamily="sans-serif"
            android:textStyle="bold|normal"
            android:textAllCaps="false"/>

        <shs2.rohfeedback.widget.AutoBgButton
            android:id="@+id/btnSettings"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1dp"
            android:background="#854be2"
            android:fontFamily="sans-serif"
            android:text="@string/setting"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="#fff"
            android:textStyle="bold|normal" />

      
    </LinearLayout>

</ScrollView>